Added task_list.txt of things left to do for project 1, and added a parser.cpp/h for future expansion (and fixed a few linking errors that cropped up)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif(MSVC)
 
 add_subdirectory(fmt)
 
-add_executable(lexer src/lexer.cpp) 
+add_executable(lexer src/lexer.cpp src/parser.cpp) 
 
 target_link_libraries(lexer PUBLIC fmt)
 
