--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,6 @@ cmake_minimum_required (VERSION 3.7)
 project (pascal_compiler VERSION 0.0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-if(MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
-endif(MSVC)
 
 add_subdirectory(fmt)
 
@@ -12,10 +9,19 @@ add_executable(compiler src/main.cpp src/lexer.cpp src/parser.cpp)
 
 target_link_libraries(compiler PUBLIC fmt)
 
-
 add_executable(massager src/grammar_massager.cpp) 
-
 target_link_libraries(massager PUBLIC fmt)
+
+if(MSVC)
+    target_compile_options(compiler PRIVATE "/std:c++17")
+	target_compile_options(compiler PRIVATE "/permissive-") 
+    target_compile_options(massager PRIVATE "/std:c++17")
+	target_compile_options(massager PRIVATE "/permissive-")    
+   
+endif(MSVC)
+
+
+
 
 
 
